force-app/main/default/objects/Pet__c/Pet__c.object-meta.xml
<CustomObject>
    <label>Pet</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>