force-app/main/default/objects/Pet__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>Birthdate of pet</description>
    <inlineHelpText>Enter the birthdate of the pet.</inlineHelpText>
    <label>Birthdate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>