force-app/main/default/objects/Pet__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <description>Shows Birthday cake image on pet&#39;s birthday.</description>
    <formula>IF(AND(MONTH(Birthdate__c) = MONTH(TODAY()), DAY(Birthdate__c) = DAY(TODAY())), IMAGE(&quot;https://abcpets2-dev-ed--c.documentforce.com/servlet/servlet.FileDownload?file=0155Y0000056sse&quot;, &quot;Birthday Cake&quot;, 30, 30),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows Birthday cake image on pet&#39;s birthday.</inlineHelpText>
    <label>Birthday</label>
    <type>Text</type>
</CustomField>