force-app/main/default/objects/Pet__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <description>Breed of pet</description>
    <inlineHelpText>Optional - Enter the breed of the pet.</inlineHelpText>
    <label>Breed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>