force-app/main/default/objects/Pet__c/fields/Pet_Owner__c.field-meta.xml
<CustomField>
    <fullName>Pet_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>People__c</referenceTo>
    <relationshipLabel>Pets</relationshipLabel>
    <relationshipName>Pets</relationshipName>
    <type>Lookup</type>
</CustomField>