force-app/main/default/objects/Pet__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Pet</description>
    <inlineHelpText>Select the type of pet.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Bird</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Rabbit</fullName>
            </value>
            <value>
                <fullName>Turtle</fullName>
            </value>
            <value>
                <fullName>Snake</fullName>
            </value>
            <value>
                <fullName>Lizard</fullName>
            </value>
            <value>
                <fullName>Hamster</fullName>
            </value>
            <value>
                <fullName>Guinea Pig</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Rat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>