force-app/main/default/objects/Pet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Breed__c</columns>
    <columns>Age__c</columns>
    <columns>Birthday__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>