force-app/main/default/objects/Pet__c/listViews/Today_s_Birthdays.listView-meta.xml
<ListView>
    <fullName>Today_s_Birthdays</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Type__c</columns>
    <columns>Breed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Birthday__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Today&#39;s Birthdays</label>
</ListView>